Implementación noticias por texto
Se ha implementado la creación de noticias por medio de texto, funcionalidad que permite especificar título, contenido y autor de la noticia y a partir de esto crea una noticia nueva

--- a/noticias.html
+++ b/noticias.html
@@ -41,6 +41,23 @@
     <main>
         <p>Introduzca sus noticias desde un archivo de texto:</p>
         <input type="file" onchange="noticias.readInputFile(this.files);" />
+        <p>Introduzca sus noticias manualmente:</p>
+        <section>
+            <section>
+                <label>Título</label>
+                <textarea></textarea>
+            </section>
+            <section>
+                <label>Contenido</label>
+                <textarea></textarea>
+            </section>
+            <section>
+                <label>Autor</label>
+                <textarea></textarea>
+            </section>
+            
+            <button onclick="noticias.getNewActionFromUserText()">Crear Noticia</button>
+        </section>
         <section>
             <h2>Noticias Disponibles</h2>
         </section>
