--- a/viajes.html
+++ b/viajes.html
@@ -5,36 +5,41 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <title>Viajes</title>
-    <meta name="author" content="Javier Sanabria Miranda"/>
-    <meta name="description" content="Viajes planificados para la F1"/>
-    <meta name="keywords" content="F1 Desktop"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Javier Sanabria Miranda" />
+    <meta name="description" content="Viajes planificados para la F1" />
+    <meta name="keywords" content="F1 Desktop" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/viajes.js"></script>
 </head>
 
 <body>
     <!-- Datos con el contenido que aparece en el navegador -->
-     <header>
-    <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
-    <nav>
-        <a href="index.html" title="Inicio">Inicio</a>
-        <a href="piloto.html" title="Piloto">Piloto</a>
-        <a href="noticias.html" title="Noticias">Noticias</a>
-        <a href="calendario.html" title="Calendario">Calendario</a>
-        <a href="meteorologia.html" title="Meteorología">Meteorología</a>
-        <a href="circuito.html" title="Circuitos">Circuitos</a>
-        <a href="viajes.html" title="Viajes" class="active">Viajes</a>
-        <a href="juegos.html" title="Juegos">Juegos</a>
-    </nav>
-     </header>
+    <header>
+        <h1><a href="index.html" title="Inicio">F1 Desktop</a></h1>
+        <nav>
+            <a href="index.html" title="Inicio">Inicio</a>
+            <a href="piloto.html" title="Piloto">Piloto</a>
+            <a href="noticias.html" title="Noticias">Noticias</a>
+            <a href="calendario.html" title="Calendario">Calendario</a>
+            <a href="meteorologia.html" title="Meteorología">Meteorología</a>
+            <a href="circuito.html" title="Circuitos">Circuitos</a>
+            <a href="viajes.html" title="Viajes" class="active">Viajes</a>
+            <a href="juegos.html" title="Juegos">Juegos</a>
+        </nav>
+    </header>
 
-     <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> Viajes</p>
+    <p>Estás en <a href="index.html" title="Inicio">Inicio</a> >> Viajes</p>
 
     <h2>Viajes</h2>
-    <p>En desarrollo</p>
+    <main>
+        <button onclick="viajes.getStaticMap()">Obtener Mapa</button>
+    </main> 
 </body>
 
 </html>
