Panel de Funcionamiento del Juego Adaptable

--- a/memoria.html
+++ b/memoria.html
@@ -44,7 +44,7 @@
         </header>
         
         <!-- Panel de explicación sobre el funcionamiento del juego -->
-        <section>
+        <section hidden>
             <header>
                 <h3>Funcionamiento del Juego</h3>
                 <button>✖</button>
