--- a/noticias.html
+++ b/noticias.html
@@ -40,7 +40,7 @@
     <h2>Noticias</h2>
     <main>
         <p>Introduzca sus noticias desde un archivo de texto:</p>
-        <input type="file" onchange="noticias.readInputFile(this.files);" />
+        <input type="file" onchange="noticias.readInputFile(this.files)" />
         <p>Introduzca sus noticias manualmente:</p>
         <section>
             <section>
