Cambios en CSS y HTML para pasar Validadores

--- a/noticias.html
+++ b/noticias.html
@@ -39,20 +39,21 @@
 
     <h2>Noticias</h2>
     <main>
-        <p>Introduzca sus noticias desde un archivo de texto:</p>
+        <h3>Introduzca sus noticias desde un archivo de texto:</h3>
         <input type="file" onchange="noticias.readInputFile(this.files)" />
-        <p>Introduzca sus noticias manualmente:</p>
+        
         <section>
+            <h3>Introduzca sus noticias manualmente:</h3>
             <section>
-                <label>Título</label>
+                <h4>Título</h4>
                 <textarea></textarea>
             </section>
             <section>
-                <label>Contenido</label>
+                <h4>Contenido</h4>
                 <textarea></textarea>
             </section>
             <section>
-                <label>Autor</label>
+                <h4>Autor</h4>
                 <textarea></textarea>
             </section>
             
