Creación de Clase Record en Semaforo php

--- a/juegos.html
+++ b/juegos.html
@@ -37,7 +37,7 @@
     <main>
         <nav>
             <a href="memoria.html" title="Juego Memoria">Juego de Memoria</a>
-            <a href="semaforo.html" title="Juego de Tiempo de Reacción">Juego de Tiempo de Reacción</a>
+            <a href="semaforo.php" title="Juego de Tiempo de Reacción">Juego de Tiempo de Reacción</a>
         </nav>
     </main>
 </body>
