--- a/calendario.html
+++ b/calendario.html
@@ -30,7 +30,7 @@
             <a href="calendario.html" title="Calendario" class="active">Calendario</a>
             <a href="meteorologia.html" title="Meteorología">Meteorología</a>
             <a href="circuito.html" title="Circuitos">Circuitos</a>
-            <a href="viajes.html" title="Viajes">Viajes</a>
+            <a href="viajes.php" title="Viajes">Viajes</a>
             <a href="juegos.html" title="Juegos">Juegos</a>
         </nav>
     </header>
