Eliminación de todos los manejos de eventos por medio de atributos HTML

--- a/api.html
+++ b/api.html
@@ -40,7 +40,7 @@
     <section>
         <h2>Juego Pit Stop</h2>
 
-        <button onclick="pitStop.setFullScreen()">Pantalla Completa</button>
+        <button>Pantalla Completa</button>
         <!-- Zona de Drop -->
         <section>
             <h3>Coche a Reparar</h3>
@@ -70,5 +70,6 @@
     </section>
     <script>
         pitStop.getWheels();
+        pitStop.addEventListeners();
     </script>
 </body>
