Cambios en el botón de ayuda del juego de memoria
Se ha puesto explicitamente la palabra "Ayuda" y se ha ubicado el botón justo encima del propio tablero de juego

--- a/memoria.html
+++ b/memoria.html
@@ -40,7 +40,7 @@
     <section>
         <header>
             <h2>Juego de Memoria</h2> 
-            <button>?</button>
+            <button>Ayuda</button>
         </header>
         
         <!-- Panel de explicación sobre el funcionamiento del juego -->
