Implementación botón de reiniciar en juego de memoria

--- a/memoria.html
+++ b/memoria.html
@@ -40,7 +40,11 @@
     <section>
         <header>
             <h2>Juego de Memoria</h2> 
-            <button>Ayuda</button>
+            <section>
+                <button>Ayuda</button>
+                <button>Reiniciar</button>
+            </section>
+            
         </header>
         
         <!-- Panel de explicación sobre el funcionamiento del juego -->
