Introducción de mejoras de usabilidad tanda 2

--- a/memoria.html
+++ b/memoria.html
@@ -39,7 +39,7 @@
 
     <section>
         <header>
-            <h2>Juego de Memoria</h2> 
+            <h2>Juego de Memoria - Juntar Cartas Iguales</h2> 
             <section>
                 <button>Ayuda</button>
                 <button>Reiniciar</button>
