Reducción del texto de la ayuda del juego de memoria

--- a/memoria.html
+++ b/memoria.html
@@ -54,17 +54,11 @@
                 <button>✖</button>
             </header>
             <p>
-                El juego consiste en girar todas las cartas del tablero, de modo que queden boca arriba. 
-                Al girar una carta esta quedará boca arriba mostrando la imagen que la representa.
-                Al girar la siguiente carta pueden suceder dos cosas:
+                El objetivo es encontrar todas las parejas de cartas. Al girar una carta, esta mostrará su imagen. Al girar otra carta podrán darse dos casos:
             </p>
             <ul>
-                <li>
-                    Las dos cartas contienen la misma imagen → ambas permanecerán boca arriba.
-                </li>
-                <li>
-                    Las dos cartas contienen imágenes diferentes → ambas volverán a ponerse boca abajo.
-                </li>
+                <li>Si ambas cartas coinciden, permanecerán boca arriba.</li>
+                <li>Si no coinciden, se girarán de nuevo boca abajo.</li>
             </ul>
         </section>
         <script>
