Corrección de memoria para pasar validador HTML
Se ha corregido una advertencia del validador pues había un section sin cabecera dentro

--- a/memoria.html
+++ b/memoria.html
@@ -39,14 +39,11 @@
 
     <section>
         <header>
-            <h2>Juego de Memoria - Juntar Cartas Iguales</h2> 
-            <section>
-                <button>Ayuda</button>
-                <button>Reiniciar</button>
-            </section>
-            
+            <h2>Juego de Memoria - Juntar Cartas Iguales</h2>
+            <button>Ayuda</button>
+            <button>Reiniciar</button>
         </header>
-        
+
         <!-- Panel de explicación sobre el funcionamiento del juego -->
         <section hidden>
             <header>
@@ -54,7 +51,8 @@
                 <button>✖</button>
             </header>
             <p>
-                El objetivo es encontrar todas las parejas de cartas. Al girar una carta, esta mostrará su imagen. Al girar otra carta podrán darse dos casos:
+                El objetivo es encontrar todas las parejas de cartas. Al girar una carta, esta mostrará su imagen. Al
+                girar otra carta podrán darse dos casos:
             </p>
             <ul>
                 <li>Si ambas cartas coinciden, permanecerán boca arriba.</li>
